--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@ctrl/ngx-codemirror": "^2.2.1",
+    "hammerjs": "^2.0.8",
     "@fortawesome/fontawesome-free": "^5.12.0",
     "codemirror": "^5.51.0",
     "rxjs": "~6.5.4",
